fix: move mobile toc up to avoid overlap with OS controls

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -4014,7 +4014,7 @@ h1:target .heading-anchor:before, h2:target .heading-anchor:before, h3:target .h
 #toc {
   display: block;
   position: absolute;
-  top: calc(var(--tnh) + var(--tg) + 1rem);
+  top: calc(var(--tnh) + 1rem);
   right: 0;
   width: 33rem;
   max-height: calc(100vh - var(--tnh) - 2 * 3rem - 4rem);
